# thrift

./: .gitignore  BUILD  MODULE.bazel  Taskfile.yaml  generator.bzl  sync-upstream.sh
lib/cpp/src/thrift/: config.h
